--- a/SemanticComponent/src/com/sd/semantic/components/sRelationBrowser.mxml
+++ b/SemanticComponent/src/com/sd/semantic/components/sRelationBrowser.mxml
@@ -206,9 +206,19 @@
         /** Base URL of the flex component */
         var baseUrl:String = "./";
         
-        if(Application.application.baseAppUrl && Application.application.baseAppUrl != "")
+        if(Application.application.hasOwnProperty("baseAppUrl"))
         {
-          baseUrl = Application.application.baseAppUrl;
+          if(Application.application.baseAppUrl != "")
+          {
+            baseUrl = Application.application.baseAppUrl;
+          }
+        } 
+        else if(Application.application.parameters.baseAppUrl)
+        {
+          if(Application.application.parameters.baseAppUrl != "")
+          {
+            baseUrl = Application.application.parameters.baseAppUrl;
+          }
         }
         
         var generalSettingsLoader:URLLoader = new URLLoader();
@@ -243,7 +253,8 @@
         }
         catch(error:Error)
         { 
-          Alert.show("Can't load settings file '/settings/General.xml'. The linear chart tool won't be displayed.");
+          Alert.show("Can't load settings file '/settings/General.xml'. The linear chart tool won't be displayed." +
+                     "(" + error.message + ")");
           isError = true;
         }
         
@@ -262,10 +273,20 @@
           /** Base URL of the flex component */
           var baseUrl:String = "./";
           
-          if(Application.application.baseAppUrl && Application.application.baseAppUrl != "")
+          if(Application.application.hasOwnProperty("baseAppUrl"))
           {
-            baseUrl = Application.application.baseAppUrl;
-          }          
+            if(Application.application.baseAppUrl != "")
+            {
+              baseUrl = Application.application.baseAppUrl;
+            }
+          } 
+          else if(Application.application.parameters.baseAppUrl)
+          {
+            if(Application.application.parameters.baseAppUrl != "")
+            {
+              baseUrl = Application.application.parameters.baseAppUrl;
+            }
+          }        
           
           /** URL Loader for the map settings file */
           var settingsLoader:URLLoader = new URLLoader();
@@ -292,7 +313,8 @@
         }
         catch(error:Error)
         { 
-          Alert.show("Can't load settings file '/settings/sRelationBrowser.xml'. The map tool won't be displayed.");
+          Alert.show("Can't load settings file '/settings/sRelationBrowser.xml'. The map tool won't be displayed." +
+                     "(" + error.message + ")");
           isError = true;
         }
          
@@ -311,10 +333,20 @@
           /** Base URL of the flex component */
           var baseUrl:String = "./";
           
-          if(Application.application.baseAppUrl && Application.application.baseAppUrl != "")
+          if(Application.application.hasOwnProperty("baseAppUrl"))
           {
-            baseUrl = Application.application.baseAppUrl;
-          }              
+            if(Application.application.baseAppUrl != "")
+            {
+              baseUrl = Application.application.baseAppUrl;
+            }
+          } 
+          else if(Application.application.parameters.baseAppUrl)
+          {
+            if(Application.application.parameters.baseAppUrl != "")
+            {
+              baseUrl = Application.application.parameters.baseAppUrl;
+            }
+          }            
           
           var skinsLoader:URLLoader = new URLLoader();
           
